add check-circle tr

--- a/index.html
+++ b/index.html
@@ -57,6 +57,28 @@
         </tr>
         <tr>
             <td class="heart">
+                <i class="fas fa-check-circle yellow"><br>ПРО КУРС</i>
+                <i class="far fa-check-circle brown"><br>ПРО КУРС</i>
+            </td>
+            <td class="heart">
+                <i class="fas fa-check-circle yellow"><br>НОВИНИ</i>
+                <i class="far fa-check-circle brown"><br>НОВИНИ</i>
+            </td>
+            <td class="heart">
+                <i class="fas fa-check-circle yellow"><br>ВИКЛАДАЧІ</i>
+                <i class="far fa-check-circle brown"><br>ВИКЛАДАЧІ</i>
+            </td>
+            <td class="heart">
+                <i class="fas fa-check-circle yellow"><br>ПРОГРАМА НАВЧАННЯ</i>
+                <i class="far fa-check-circle brown"><br>ПРОГРАМА НАВЧАННЯ</i>
+            </td>
+            <td class="heart">
+                <i class="fas fa-check-circle yellow"><br>ВАРТІСТЬ</i>
+                <i class="far fa-check-circle brown"><br>ВАРТІСТЬ</i>
+            </td>
+        </tr>
+        <tr>
+            <td class="heart">
                 <i class="fas fa-cookie blue"><br>ПРО КУРС</i>
                 <i class="fas fa-cookie-bite black"><br>ПРО КУРС</i>
             </td>
