check-circle far bold

--- a/index.html
+++ b/index.html
@@ -58,23 +58,23 @@
         <tr>
             <td class="heart">
                 <i class="fas fa-check-circle yellow"><br>ПРО КУРС</i>
-                <i class="far fa-check-circle brown"><br>ПРО КУРС</i>
+                <i class="far fa-check-circle brown"><br><b>ПРО КУРС</b></i>
             </td>
             <td class="heart">
                 <i class="fas fa-check-circle yellow"><br>НОВИНИ</i>
-                <i class="far fa-check-circle brown"><br>НОВИНИ</i>
+                <i class="far fa-check-circle brown"><br><b>НОВИНИ</b></i>
             </td>
             <td class="heart">
                 <i class="fas fa-check-circle yellow"><br>ВИКЛАДАЧІ</i>
-                <i class="far fa-check-circle brown"><br>ВИКЛАДАЧІ</i>
+                <i class="far fa-check-circle brown"><br><b>ВИКЛАДАЧІ</b></i>
             </td>
             <td class="heart">
                 <i class="fas fa-check-circle yellow"><br>ПРОГРАМА НАВЧАННЯ</i>
-                <i class="far fa-check-circle brown"><br>ПРОГРАМА НАВЧАННЯ</i>
+                <i class="far fa-check-circle brown"><br><b>ПРОГРАМА НАВЧАННЯ</b></i>
             </td>
             <td class="heart">
                 <i class="fas fa-check-circle yellow"><br>ВАРТІСТЬ</i>
-                <i class="far fa-check-circle brown"><br>ВАРТІСТЬ</i>
+                <i class="far fa-check-circle brown"><br><b>ВАРТІСТЬ</b></i>
             </td>
         </tr>
         <tr>
