--- a/index.html
+++ b/index.html
@@ -79,24 +79,24 @@
         </tr>
         <tr>
             <td class="heart">
-                <i class="fas fa-cookie blue"><br>ПРО КУРС</i>
-                <i class="fas fa-cookie-bite black"><br>ПРО КУРС</i>
+                <i class="fas fa-cookie violet"><br>ПРО КУРС</i>
+                <i class="fas fa-cookie-bite indigo"><br>ПРО КУРС</i>
             </td>
             <td class="heart">
-                <i class="fas fa-cookie blue"><br>НОВИНИ</i>
-                <i class="fas fa-cookie-bite black"><br>НОВИНИ</i>
+                <i class="fas fa-cookie violet"><br>НОВИНИ</i>
+                <i class="fas fa-cookie-bite indigo"><br>НОВИНИ</i>
             </td>
             <td class="heart">
-                <i class="fas fa-cookie blue"><br>ВИКЛАДАЧІ</i>
-                <i class="fas fa-cookie-bite black"><br>ВИКЛАДАЧІ</i>
+                <i class="fas fa-cookie violet"><br>ВИКЛАДАЧІ</i>
+                <i class="fas fa-cookie-bite indigo"><br>ВИКЛАДАЧІ</i>
             </td>
             <td class="heart">
-                <i class="fas fa-cookie blue"><br>ПРОГРАМА НАВЧАННЯ</i>
-                <i class="fas fa-cookie-bite black"><br>ПРОГРАМА НАВЧАННЯ</i>
+                <i class="fas fa-cookie violet"><br>ПРОГРАМА НАВЧАННЯ</i>
+                <i class="fas fa-cookie-bite indigo"><br>ПРОГРАМА НАВЧАННЯ</i>
             </td>
             <td class="heart">
-                <i class="fas fa-cookie blue"><br>ВАРТІСТЬ</i>
-                <i class="fas fa-cookie-bite black"><br>ВАРТІСТЬ</i>
+                <i class="fas fa-cookie violet"><br>ВАРТІСТЬ</i>
+                <i class="fas fa-cookie-bite indigo"><br>ВАРТІСТЬ</i>
             </td>
         </tr>
     </table>
