--- a/index.html
+++ b/index.html
@@ -35,23 +35,23 @@
         </tr>
         <tr>
             <td class="heart">
-                <i class="far fa-bookmark black"><br><b>ПРО КУРС</b></i>
+                <i class="far fa-bookmark blue"><br><b>ПРО КУРС</b></i>
                 <i class="fas fa-bookmark orange"><br>ПРО КУРС</i>
             </td>
             <td class="heart">
-                <i class="far fa-bookmark black"><br><b>НОВИНИ</b></i>
+                <i class="far fa-bookmark blue"><br><b>НОВИНИ</b></i>
                 <i class="fas fa-bookmark orange"><br>НОВИНИ</i>
             </td>
             <td class="heart">
-                <i class="far fa-bookmark black"><br><b>ВИКЛАДАЧІ</b></i>
+                <i class="far fa-bookmark blue"><br><b>ВИКЛАДАЧІ</b></i>
                 <i class="fas fa-bookmark orange"><br>ВИКЛАДАЧІ</i>
             </td>
             <td class="heart">
-                <i class="far fa-bookmark black"><br><b>ПРОГРАМА НАВЧАННЯ</b></i>
+                <i class="far fa-bookmark blue"><br><b>ПРОГРАМА НАВЧАННЯ</b></i>
                 <i class="fas fa-bookmark orange"><br>ПРОГРАМА НАВЧАННЯ</i>
             </td>
             <td class="heart">
-                <i class="far fa-bookmark black"><br><b>ВАРТІСТЬ</b></i>
+                <i class="far fa-bookmark blue"><br><b>ВАРТІСТЬ</b></i>
                 <i class="fas fa-bookmark orange"><br>ВАРТІСТЬ</i>
             </td>
         </tr>
