--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <tr>
             <td class="heart">
                 <i class="fas fa-heart green"><br>ПРО КУРС</i>
-                <i class="fas fa-heart-broken "><br>ПРО КУРС</i>
+                <i class="fas fa-heart-broken red"><br>ПРО КУРС</i>
             </td>
             <td class="heart">
                 <i class="fas fa-heart green"><br>НОВИНИ</i>
